# ruban_led_connected

./: .gitignore  CODEOWNERS  README.md
back_ruban_led_connected/: Cargo.toml
back_ruban_led_connected/configuration/: base.yaml
back_ruban_led_connected/src/: configuration.rs  lib.rs  main.rs
back_ruban_led_connected/src/framework_api/: mod.rs  startup.rs
back_ruban_led_connected/src/framework_api/routes/: mod.rs
back_ruban_led_connected/src/framework_api/routes/bluetooth/: mod.rs
back_ruban_led_connected/src/framework_api/routes/bluetooth/devices/: connect_stream.rs  get.rs  mod.rs  post.rs
back_ruban_led_connected/src/framework_api/routes/bluetooth/engine/: get.rs  mod.rs  post.rs  scan_stream.rs
back_ruban_led_connected/src/framework_bluetooth/: communication.rs  device.rs  manager.rs  mod.rs
front_ruban_led_connected/: .env  .env.production  README.md  index.html  package-lock.json  package.json  script.js  styles.css
front_ruban_led_connected/src/: App.vue  main.ts
front_ruban_led_connected/src/components/: Devices.vue  TopMenu.vue
front_ruban_led_connected/src/router/: index.ts
front_ruban_led_connected/src/services/: api-client.ts  utils.ts  web-socket.ts
front_ruban_led_connected/src/views/: DevicesScanView.vue  DevicesView.vue  TheWelcome.vue
