[package]
name = "back_ruban_led_connected"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "back_ruban_led_connected"
path = "src/main.rs"

[dependencies]
bluer = { version = "0.15.7", features = ["full"] }
tokio = { version = "1.28.2", features = ["full"] }
