[package]
name = "back_ruban_led_connected"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[[bin]]
name = "back_ruban_led_connected"
path = "src/main.rs"

[dependencies]
bluer = { version = "0.15.7", features = ["full"] }
tokio = { version = "1.28.2", features = ["full"] }
futures = "0.3.28"
config = "0.13.3"
serde = { version = "1.0.160", features = ["derive"] }
serde-aux = "4"
anyhow = "1"
actix = "0.13.0"
actix-web = "4"
actix-web-actors = "4.2.0"
rand = "0.8.5"
actix-rt = "2.8.0"
